# advent-2023

./: LICENSE  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day2.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  pyproject.toml  readme.md
