[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Jacek Czupyt <jacek.czupyt@besidethepark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

