[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Jacek Czupyt <jacek.czupyt@besidethepark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

